# api/hospital.go
@@ -1,20 +1,66 @@
 package api
 
 import (
+	"errors"
 	"net/http"
 	"strconv"
 	"time"
 
 	"github.com/gin-gonic/gin"
+	"github.com/jackc/pgconn"
+	"github.com/jackc/pgerrcode"
 
 	db "github.com/VinCPR/backend/db/sqlc"
 )
+
+type createHospitalRequest struct {
+	Name        string `json:"name" binding:"required"`
+	Description string `json:"description" binding:"required"`
+	Address     string `json:"address" binding:"required"`
+}
 
 type HospitalResponse struct {
 	Name        string    `json:"name"`
 	Description string    `json:"description"`
 	Address     string    `json:"address"`
 	CreatedAt   time.Time `json:"created_at"`
+}
+
+// createHospital
+// @Summary create new hospital
+// @Description create new hospital
+// @Tags Hospital
+// @Accept	json
+// @Produce  json
+// @Param body body createHospitalRequest true "input required: hospital name, description, address"
+// @Success 200 {object} HospitalResponse "ok"
+// @Router /hospital [post]
+func (server *Server) createHospital(ctx *gin.Context) {
+	var req createHospitalRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse(err))
+		return
+	}
+	hospital, err := server.store.CreateHospital(ctx, db.CreateHospitalParams{
+		Name:        req.Name,
+		Description: req.Description,
+		Address:     req.Address,
+	})
+	if err != nil {
+		var pgErr *pgconn.PgError
+		if errors.As(err, &pgErr) && pgErr.Code == pgerrcode.UniqueViolation {
+			ctx.JSON(http.StatusForbidden, errorResponse(err))
+			return
+		}
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+	ctx.JSON(http.StatusOK, HospitalResponse{
+		Name:        hospital.Name,
+		Description: hospital.Description,
+		Address:     hospital.Address,
+		CreatedAt:   hospital.CreatedAt,
+	})
 }
 
 // listHospitals
