# api/service.go
@@ -1,14 +1,24 @@
 package api
 
 import (
+	"errors"
 	"net/http"
 	"strconv"
 	"time"
 
 	"github.com/gin-gonic/gin"
+	"github.com/jackc/pgconn"
+	"github.com/jackc/pgerrcode"
 
 	db "github.com/VinCPR/backend/db/sqlc"
 )
+
+type createServiceRequest struct {
+	HospitalID  int64  `json:"hospitalID" binding:"required"`
+	SpecialtyID int64  `json:"specialtyID" binding:"required"`
+	Name        string `json:"name" binding:"required"`
+	Description string `json:"description" binding:"required"`
+}
 
 type ServiceResponse struct {
 	HospitalID  int64     `json:"hospitalID"`
@@ -16,6 +26,45 @@ type ServiceResponse struct {
 	Name        string    `json:"name"`
 	Description string    `json:"description"`
 	CreatedAt   time.Time `json:"created_at"`
+}
+
+// createService
+// @Summary create new service
+// @Description create new service
+// @Tags Service
+// @Accept	json
+// @Produce  json
+// @Param body body createServiceRequest true "input required: service hospitalID, specialtyID, name, description"
+// @Success 200 {object} ServiceResponse "ok"
+// @Router /service [post]
+func (server *Server) createService(ctx *gin.Context) {
+	var req createServiceRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse(err))
+		return
+	}
+	service, err := server.store.CreateService(ctx, db.CreateServiceParams{
+		HospitalID:  req.HospitalID,
+		SpecialtyID: req.HospitalID,
+		Name:        req.Name,
+		Description: req.Description,
+	})
+	if err != nil {
+		var pgErr *pgconn.PgError
+		if errors.As(err, &pgErr) && pgErr.Code == pgerrcode.UniqueViolation {
+			ctx.JSON(http.StatusForbidden, errorResponse(err))
+			return
+		}
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+	ctx.JSON(http.StatusOK, ServiceResponse{
+		HospitalID:  service.HospitalID,
+		SpecialtyID: service.SpecialtyID,
+		Name:        service.Name,
+		Description: service.Description,
+		CreatedAt:   service.CreatedAt,
+	})
 }
 
 // listServicesByHospitalID
