# api/student.go
@@ -1,14 +1,25 @@
 package api
 
 import (
+	"errors"
 	"net/http"
 	"strconv"
 	"time"
 
 	"github.com/gin-gonic/gin"
+	"github.com/jackc/pgconn"
+	"github.com/jackc/pgerrcode"
 
 	db "github.com/VinCPR/backend/db/sqlc"
 )
+
+type createStudentRequest struct {
+	UserID    int64  `json:"user_id" binding:"required"`
+	StudentID string `json:"student_id" binding:"required"`
+	FirstName string `json:"firstname" binding:"required"`
+	LastName  string `json:"lastname" binding:"required"`
+	Mobile    string `json:"mobile" binding:"required"`
+}
 
 type StudentResponse struct {
 	UserID    int64     `json:"user_id"`
@@ -17,6 +28,47 @@ type StudentResponse struct {
 	LastName  string    `json:"last_name"`
 	Mobile    string    `json:"mobile"`
 	CreatedAt time.Time `json:"created_at"`
+}
+
+// createStudent
+// @Summary create new student
+// @Description create new student
+// @Tags Student
+// @Accept	json
+// @Produce  json
+// @Param body body createStudentRequest true "input required: student user_id, student_id, firstname, lastname, mobile"
+// @Success 200 {object} StudentResponse "ok"
+// @Router /student [post]
+func (server *Server) createStudent(ctx *gin.Context) {
+	var req createStudentRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse(err))
+		return
+	}
+	student, err := server.store.CreateStudent(ctx, db.CreateStudentParams{
+		UserID:    req.UserID,
+		StudentID: req.StudentID,
+		FirstName: req.FirstName,
+		LastName:  req.LastName,
+		Mobile:    req.Mobile,
+	})
+	if err != nil {
+		var pgErr *pgconn.PgError
+		if errors.As(err, &pgErr) && pgErr.Code == pgerrcode.UniqueViolation {
+			ctx.JSON(http.StatusForbidden, errorResponse(err))
+			return
+		}
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+	ctx.JSON(http.StatusOK, StudentResponse{
+		UserID:    student.UserID,
+		StudentID: student.StudentID,
+		FirstName: student.FirstName,
+		LastName:  student.LastName,
+		Mobile:    student.Mobile,
+		CreatedAt: student.CreatedAt,
+	})
 }
 
 // listStudentsByName
